[gd_scene load_steps=6 format=3 uid="uid://bgvt6hnndq8qu"]

[ext_resource type="Texture2D" uid="uid://b5cn5wtnesogy" path="res://Resources/Art/Enchantments/prosperity_enchantment.png" id="1_57mqs"]
[ext_resource type="Script" path="res://Scripts/Enchantments/prosperity.gd" id="1_vkj10"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rkvo3"]
size = Vector2(78, 78)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l47jl"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kiyyh"]
bg_color = Color(0.688023, 0.596125, 0.233008, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[node name="Prosperity" type="Node2D" groups=["enchantment"]]
script = ExtResource("1_vkj10")

[node name="EnchantmentImage" type="Sprite2D" parent="."]
texture = ExtResource("1_57mqs")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_rkvo3")

[node name="PopupPanel" type="PopupPanel" parent="."]
transparent_bg = true
size = Vector2i(378, 50)
theme_override_styles/panel = SubResource("StyleBoxFlat_l47jl")

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 374.0
offset_bottom = 46.0

[node name="Name" type="Label" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Rock"
vertical_alignment = 1

[node name="EnchantmentUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
mouse_filter = 2

[node name="ShopPanel" type="Panel" parent="EnchantmentUI"]
visible = false
layout_mode = 0
offset_left = -37.0
offset_top = 30.0
offset_right = -7.0
offset_bottom = 60.0
theme_override_styles/panel = SubResource("StyleBoxFlat_kiyyh")

[node name="ShopLabel" type="Label" parent="EnchantmentUI/ShopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1
